--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -76,8 +76,8 @@ template: |{{`
                 value: "`}}{{ .Values.from_nova.cell2_db_name }}{{`"
               - name: NOVA_CELL2_DB_USER
                 value: "`}}{{ .Values.from_nova.cell2_db_user }}{{`"
-              - name: NOVA_CELL2_REGION
-                value: "`}}{{ .Values.vcenter_nanny_consistency.cell2_region }}{{`"
+              - name: NOVA_CELL2_AZ
+                value: "`}}{{ .Values.vcenter_nanny_consistency.cell2_az }}{{`"
               - name: OS_AUTH_URL
                 value: "https://identity-3.{{ availability_zone[:-1] }}.cloud.sap:443/v3"
               - name: OS_PROJECT_NAME
