--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -47,8 +47,8 @@ vcenter_nanny_consistency:
   iterations: 3
   # maximum number of inconsistent volumes to fix automatically - otherwise fixing will be denied
   fix_limit: 10
-  # if cells are enabled, which region has its own cell db
-  cell2_region: False
+  # if cells are enabled, which region has its own cell db, False if not relevant
+  cell2_az: False
 
 vcenter_exporter:
   enabled: False
