--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
@@ -49,7 +49,10 @@ template: |
             `}}{{- if $global_values.vcenter_exporters.resources.enabled }}{{`
             livenessProbe:
               exec:
-                command: [ test $(ls -l /proc/7/task | wc -l) -lt 10000 ]
+                command: 
+                  - sh 
+                  - -c
+                  - '[ $(ls -l /proc/7/task | wc -l) -lt 10000 ]'
               initialDelaySeconds: 45
               periodSeconds: 5
             resources:
