Two new flavors added
Added two new private flavors by Davids and Gergelys request.
Flavor x1.32xlarge 128 vCPU / 1.9TB of RAM
Flavor x1e.16xlarge 64vCPU / 1.9TB of RAM

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -186,4 +186,24 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "x1.32xlarge"
+    id: "250"
+    vcpus: "128"
+    ram: "1992278"
+    disk: "64"
+    is_public: false
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+  - name: "x1e.16xlarge"
+    id: "260"
+    vcpus: "64"
+    ram: "1992278"
+    disk: "64"
+    is_public: false
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+
+
       
