[tempest] improve tempest helm charts.

--- a/openstack/tempest/neutron-tempest/templates/seed.yaml
+++ b/openstack/tempest/neutron-tempest/templates/seed.yaml
@@ -10,59 +10,59 @@ spec:
   rbac_policies:
   - target_tenant_name: neutron-tempest-admin1@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest-admin2@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest-admin3@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest-admin4@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest1@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest2@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest3@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest4@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest5@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest6@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest7@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest8@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest9@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   - target_tenant_name: neutron-tempest10@tempest
     object_type: network
-    object_name: {{ required "Missing rbac_policy_object_name value!" (index .Values (print .Chart.Name | replace "-" "_")).tempest.rbac_policy_object_name }}
+    object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
   domains:  
   - name: tempest
@@ -128,8 +128,6 @@ spec:
       description: Neutron Tempest Admin Test Project 3
     - name: neutron-tempest-admin4
       description: Neutron Tempest Admin Test Project 4
-    - name: neutron-tempest-admin5
-      description: Neutron Tempest Admin Test Project 5
     - name: neutron-tempest1
       description: Neutron Tempest Test Project 1
     - name: neutron-tempest2
@@ -202,18 +200,6 @@ spec:
       - project: neutron-tempest-admin4
         role: cloud_network_admin
       - project: neutron-tempest-admin4
-        role: resource_admin
-      - project: neutron-tempest-admin5
-        role: member
-      - project: neutron-tempest-admin5
-        role: admin
-      - project: neutron-tempest-admin5
-        role: network_admin
-      - project: neutron-tempest-admin5
-        role: compute_admin
-      - project: neutron-tempest-admin5
-        role: cloud_network_admin
-      - project: neutron-tempest-admin5
         role: resource_admin
       - project: neutron-tempest1
         role: member
@@ -367,18 +353,6 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
-      - project: neutron-tempest-admin5
-        role: member
-      - project: neutron-tempest-admin5
-        role: admin
-      - project: neutron-tempest-admin5
-        role: network_admin
-      - project: neutron-tempest-admin5
-        role: compute_admin
-      - project: neutron-tempest-admin5
-        role: cloud_network_admin
-      - project: neutron-tempest-admin5
-        role: resource_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
@@ -531,18 +505,6 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
-      - project: neutron-tempest-admin5
-        role: member
-      - project: neutron-tempest-admin5
-        role: admin
-      - project: neutron-tempest-admin5
-        role: network_admin
-      - project: neutron-tempest-admin5
-        role: compute_admin
-      - project: neutron-tempest-admin5
-        role: cloud_network_admin
-      - project: neutron-tempest-admin5
-        role: resource_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
@@ -694,18 +656,6 @@ spec:
       - project: neutron-tempest-admin4
         role: cloud_network_admin
       - project: neutron-tempest-admin4
-        role: resource_admin
-      - project: neutron-tempest-admin5
-        role: member
-      - project: neutron-tempest-admin5
-        role: admin
-      - project: neutron-tempest-admin5
-        role: network_admin
-      - project: neutron-tempest-admin5
-        role: compute_admin
-      - project: neutron-tempest-admin5
-        role: cloud_network_admin
-      - project: neutron-tempest-admin5
         role: resource_admin
       - project: neutron-tempest1
         role: member
