cleanup elk helm charts, performance tuning

--- a/openstack/elk/templates/es-client-deployment.yaml
+++ b/openstack/elk/templates/es-client-deployment.yaml
@@ -72,6 +72,8 @@ spec:
               value: "false"
             - name: HTTP_ENABLE
               value: "true"
+            - name: READONLYREST_ENABLE
+              value: "true"
             - name: ES_JAVA_OPTS
               value: "-XX:+UseG1GC -XX:MaxGCPauseMillis=300 -Xms10g -Xmx10g"
           volumeMounts:
@@ -81,8 +83,8 @@ spec:
               name: es-etc
           ports:
             - name: transport
-              containerPort: {{.Values.elk_elasticsearch_port_cluster}}
+              containerPort: {{.Values.elk_elasticsearch_cluster_port}}
               protocol: TCP
             - name: http
-              containerPort: {{.Values.elk_elasticsearch_port_internal}}
+              containerPort: {{.Values.elk_elasticsearch_http_port}}
               protocol: TCP
