--- a/openstack/elk/templates/es-manager-deployment.yaml
+++ b/openstack/elk/templates/es-manager-deployment.yaml
@@ -43,6 +43,8 @@ spec:
           - /opt/cerebro/bin/cerebro
           - -Dconfig.file=/es-etc/elasticsearch-application.conf
           - -Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
+          - -Des.networkaddress.cache.ttl=20
+          - -Des.networkaddress.cache.negative.ttl=10
         env:
           - name: NAMESPACE
             valueFrom:
