--- a/openstack/elk/templates/es-master-deployment.yaml
+++ b/openstack/elk/templates/es-master-deployment.yaml
@@ -75,7 +75,9 @@ spec:
           - name: NODE_INGEST
             value: "false"
           - name: HTTP_ENABLE
-            value: "true"
+            value: "false"
+          - name: READONLYREST_ENABLE
+            value: "false"
           - name: ES_JAVA_OPTS
             value: "-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=5000 -Xms1g -Xmx1g"
         volumeMounts:
@@ -85,7 +87,7 @@ spec:
             name: es-etc
         ports:
           - name: transport
-            containerPort: {{.Values.elk_elasticsearch_port_cluster}}
+            containerPort: {{.Values.elk_elasticsearch_cluster_port}}
             protocol: TCP
           - name: dummymasterport
             hostPort: {{.Values.elk_elasticsearch_master_dummy_port}}
