--- a/openstack/elk/templates/es-data.yaml
+++ b/openstack/elk/templates/es-data.yaml
@@ -58,10 +58,10 @@ spec:
                   fieldPath: metadata.namespace
             - name: KUBERNETES_CA_CERTIFICATE_FILE
               value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-            - name: NAMESPACE
+            - name: NODE_NAME
               valueFrom:
                 fieldRef:
-                  fieldPath: metadata.namespace
+                  fieldPath: metadata.name
             - name: NODE_MASTER
               value: "false"
             - name: NODE_INGEST
