new lxca flavor

--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -202,6 +202,17 @@ spec:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
 
+  - name: "bame_xclarity_big"
+    id: "90020"
+    vcpus: "16"
+    ram: "10240"
+    disk: "160"
+    is_public: false
+    extra_specs:
+      "catalog:description": Baremetal Monitoring for Lenovo XCA
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+
   - name: "bame_openmanage"
     id: "90020"
     vcpus: "4"
