--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -90,6 +90,9 @@ template: |{{`
                 value: "Default"
               - name: OS_PASSWORD
                 value: {{ "vcenter_nanny" | derive_password("identity-3." + availability_zone[:-1] + ".cloud.sap") | quote }}
+            volumeMounts:
+              - mountPath: /nova-etc
+                name: nova-etc
 `}}
 {{- end }}
 {{- end }}
