mount the cinder-etc configmap too to get info from it as well

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -32,6 +32,9 @@ template: |{{`
           - name: nova-etc
             configMap:
               name: nova-etc
+          - name: cinder-etc
+            configMap:
+              name: cinder-etc
         containers:
           - name: vcenter-consistency
             image: `}}{{ .Values.vcenter_nanny.docker_repo }}/vcenter-nanny:{{ .Values.vcenter_nanny_consistency.consistency_image_version | replace "string:" "" }}{{`
@@ -93,6 +96,9 @@ template: |{{`
             volumeMounts:
               - mountPath: /nova-etc
                 name: nova-etc
+            volumeMounts:
+              - mountPath: /cinder-etc
+                name: cinder-etc
 `}}
 {{- end }}
 {{- end }}
