better namining its the vcenter name and not the az here

--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -48,7 +48,7 @@ vcenter_nanny_consistency:
   # maximum number of inconsistent volumes to fix automatically - otherwise fixing will be denied
   fix_limit: 10
   # if cells are enabled, put the VCENTER_CONSISTENCY_HOST here as a reference the az with an own cell db - False if not relevant
-  cell2_az: False
+  cell2_vc: False
 
 vcenter_exporter:
   enabled: False
