[keystone] credential policy improvements - fixed tests

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -12,6 +12,7 @@ global:
 # imageRegistry: hub.global.cloud.sap
 
 debug: False
+insecure_debug: False
 
 # run a db_sync to migrate the db schema ?
 run_db_migration: False
