add note about quota sync being disabled hard for nova

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -621,6 +621,7 @@ nanny:
   debug: False
   # run the nanny every n minutes
   interval: 15
+# the quota sync part is hard disabled in the deployment for now as we do not need it anymore and to avoid accidental enablement
 quota_sync:
   enabled: False
 db_purge:
