[netapp] update charts

--- a/openstack/netapp/templates/app-harvest.yaml
+++ b/openstack/netapp/templates/app-harvest.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9108"
+    maia.io/scrape: "true"
+    maia.io/port: "9108"
 spec:
   selector:
     app:  {{ .Values.harvest.name }}
@@ -53,7 +55,7 @@ spec:
             cpu: "10m"
 
       - name: graphite-exporter
-        image: {{ .Values.harvest.image.exporter }}
+        image: {{ .Values.harvest.image.graphiteExporter }}
         args: [ "--graphite.mapping-config", "/tmp/graphite-mapping.conf" ]
         ports:
         - containerPort: 9108
