--- a/openstack/netapp/values.yaml
+++ b/openstack/netapp/values.yaml
@@ -8,12 +8,12 @@ harvest:
   image:
     harvest: mx3d/netapp-harvest:v1.05
     duplicator: mx3d/gotee:v0.2
-    exporter: prom/graphite-exporter
+    graphiteExporter: prom/graphite-exporter:v0.4.2
 
 graphite:
   name: netapp-graphite
-  image: hopsoft/graphite-statsd
+  image: hopsoft/graphite-statsd:v0.9.15-phusion0.9.18
 
-exporter:
-  name: netapp-exporter
-  image: mx3d/netapp_exporter:v0.1
+webapi_exporter:
+  name: netapp-api-exporter
+  image: mx3d/netapp-api-exporter:v0.1
