--- a/global/iris/charts/api/templates/ingress.yaml
+++ b/global/iris/charts/api/templates/ingress.yaml
@@ -6,13 +6,12 @@ metadata:
 spec:
   tls:
      - secretName: iris
-       hosts: [{{ .Values.api.ingress.host }}]
+       hosts: [{{ .Values.ingress.host }}]
   rules:
-    - host: {{ .Values.api.ingress.host }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /
             backend:
               serviceName: iris-api
               servicePort: 80
-
