--- a/global/iris/charts/api/values.yaml
+++ b/global/iris/charts/api/values.yaml
@@ -1,13 +1,11 @@
 # Default values for elektra.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-ui:
-  replica_count: 2
-
-  image:
-    repository: sapcc/iris
-    tag: latest
-    pullPolicy: IfNotPresent
+replica_count: 2
+image:
+  repository: sapcc/iris-api
+  tag: latest
+  pullPolicy: IfNotPresent
 
 # ingress:
 #   enabled: false
