--- a/global/iris/charts/ui/values.yaml
+++ b/global/iris/charts/ui/values.yaml
@@ -1,12 +1,12 @@
 # Default values for elektra.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-api:
-  replica_count: 2
-  image:
-    repository: sapcc/iris-api
-    tag: latest
-    pullPolicy: IfNotPresent
+replica_count: 2
+
+image:
+  repository: sapcc/iris
+  tag: latest
+  pullPolicy: IfNotPresent
 
 # ingress:
 #   enabled: false
