--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -160,6 +160,7 @@ data:
           - '{__name__=~"^snmp_asr_.+"}'
           - '{__name__=~"^snmp_arista_dot1qVlanFdbId"}'
           - '{__name__=~"^snmp_f5_.+"}'
+          - '{__name__=~"^snmp_n7k_.+"}'          
           - '{__name__=~"^sql_openstack_.+"}'
           - '{__name__=~"^mysql_global_status_.+"}'
           - '{__name__=~"^mysql_global_variables_.+"}'
