iris: do not use ReadWriteMany access mode

--- a/global/iris/charts/api/charts/postgresql/values.yaml
+++ b/global/iris/charts/api/charts/postgresql/values.yaml
@@ -24,8 +24,8 @@ imageTag: "9.5.4"
 ## Persist data to a persitent volume
 persistence:
   enabled: true
-  accessMode: ReadWriteMany
-  size: 500Gi
+  accessMode: ReadWriteOnce
+  size: 250Gi
   # Re-use existing (unmanged) PVC
   # existingClaim: claimName
 
