re-adds ingress-controller-public-service

--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -10,6 +10,10 @@ ingress:
       -----BEGIN CERTIFICATE-----
       -----END CERTIFICATE-----
 
+  external_public_service:
+    enabled: false
+    #ip:
+
 # values for stable/nginx-ingress chart
 nginx-ingress:
   revisionHistoryLimit: 5
