--- a/openstack/ironic/templates/inspector-deployment.yaml
+++ b/openstack/ironic/templates/inspector-deployment.yaml
@@ -55,6 +55,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        resources:
+{{ toYaml .Values.inspector.resources | indent 10 }}
         volumeMounts:
         - mountPath: /etc/ironic-inspector
           name: etcironic
@@ -78,6 +80,8 @@ spec:
       - name: dhcp
         image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-staticdhcpd:{{.Values.imageVersionStaticdhcpd | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
+        resources:
+{{ toYaml .Values.dhcp.resources | indent 10 }}
         command:
         - dumb-init
         - staticDHCPd
