--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -31,6 +31,58 @@ pod:
     api: 2
     inspector: 1
     pxe: 1
+  resources:
+    api:
+      limits:	
+        memory: 512Mi	
+        cpu: 500m	
+      requests:	
+        memory: 256Mi	
+        cpu: 100m
+    inspector:
+      limits:	
+        memory: 512Mi	
+        cpu: 500m	
+      requests:	
+        memory: 256Mi	
+        cpu: 100m
+    conductor:
+      limits:	
+        memory: 512Mi	
+        cpu: 1000m	
+      requests:	
+        memory: 256Mi	
+        cpu: 500m
+    pxe:
+      limits:
+        memory: 64Mi
+        cpu: 50m
+      requests:
+        memory: 24Mi
+        cpu: 10m
+    statsd:
+      limits:
+        memory: 64Mi
+        cpu: 50m
+      requests:
+        memory: 24Mi
+        cpu: 10m
+    console:
+      limits:
+        memory: 64Mi
+        cpu: 50m
+      requests:
+        memory: 24Mi
+        cpu: 10m
+    dhcp:
+      limits:
+        memory: 64Mi
+        cpu: 50m
+      requests:
+        memory: 24Mi
+        cpu: 10m
+
+
   lifecycle:
     upgrades:
       deployments:
@@ -108,6 +160,13 @@ neutron_port_setup_delay: 0
 
 pgmetrics:
   name: ironic
+  resources:
+    requests:
+      memory: 24Mi
+      cpu: 10m
+    limits:
+      memory: 64Mi
+      cpu: 50m
   customMetrics:
      openstack_ironic_nodes_list:
       query: "SELECT uuid, name, instance_uuid, power_state, provision_state, coalesce(last_error,'error unknown') AS last_error, count(*) as gauge from nodes group by uuid, name, instance_uuid, power_state, provision_state, last_error"
