[ironic] fixes resources values

--- a/openstack/ironic/templates/inspector-deployment.yaml
+++ b/openstack/ironic/templates/inspector-deployment.yaml
@@ -56,7 +56,7 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         resources:
-{{ toYaml .Values.inspector.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.inspector | indent 10 }}
         volumeMounts:
         - mountPath: /etc/ironic-inspector
           name: etcironic
@@ -81,7 +81,7 @@ spec:
         image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-staticdhcpd:{{.Values.imageVersionStaticdhcpd | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
         resources:
-{{ toYaml .Values.dhcp.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.dhcp | indent 10 }}
         command:
         - dumb-init
         - staticDHCPd
