--- a/openstack/ironic/templates/pxe-deployment.yaml
+++ b/openstack/ironic/templates/pxe-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - mountPath: /tftpboot
           name: ironic-tftp
         resources:
-{{ toYaml .Values.pxe.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.pxe | indent 10 }}
       - name: ironic-ipxe
         image: {{.Values.imageVersionNginx | default "nginx:stable-alpine"}}
         imagePullPolicy: IfNotPresent
@@ -61,7 +61,7 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 3
         resources:
-{{ toYaml .Values.pxe.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.pxe | indent 10 }}
       volumes:
       - name: ironic-tftp
         persistentVolumeClaim:
