--- a/openstack/ironic/templates/api-deployment.yaml
+++ b/openstack/ironic/templates/api-deployment.yaml
@@ -34,7 +34,7 @@ spec:
         image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-ironic-api:{{.Values.imageVersionIronicApi | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
         resources:
-{{ toYaml .Values.api.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.api | indent 10 }}
         command:
           - dumb-init
           - kubernetes-entrypoint
@@ -101,7 +101,7 @@ spec:
         imagePullPolicy: IfNotPresent
         args: [ --statsd.mapping-config=/etc/statsd/statsd-exporter.yaml ]
         resources:
-{{ toYaml .Values.statsd.resources | indent 10 }}
+{{ toYaml .Values.pod.resources.statsd | indent 10 }}
         ports:
           - name: statsd
             containerPort: 9125
